force-app/main/default/objects/Operation_Split_Funding__c/Operation_Split_Funding__c.object-meta.xml
<CustomObject>
    <label>Funding</label>
    <nameField>
        <label>Operation Split Funding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>