force-app/main/default/objects/Operation_Split_Funding__c/fields/bank_id__c.field-meta.xml
<CustomField>
    <fullName>bank_id__c</fullName>
    <formula>TEXT(Bank_Name__r.id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>bank id</label>
    <type>Text</type>
</CustomField>