force-app/main/default/objects/Operation_Split_Funding__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>Master_Bank__c</referenceTo>
    <relationshipLabel>Funding</relationshipLabel>
    <relationshipName>Funding</relationshipName>
    <type>Lookup</type>
</CustomField>