force-app/main/default/objects/Operation_Split_Funding__c/fields/Catatan__c.field-meta.xml
<CustomField>
    <fullName>Catatan__c</fullName>
    <label>Catatan</label>
    <type>TextArea</type>
</CustomField>