force-app/main/default/objects/Operation_Split_Funding__c/fields/fee_charge_mode_id__c.field-meta.xml
<CustomField>
    <fullName>fee_charge_mode_id__c</fullName>
    <formula>&quot;FUNDS_ON_HOLD&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fee charge mode id</label>
    <type>Text</type>
</CustomField>