force-app/main/default/objects/Operation_Split_Funding__c/fields/Funding_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Name__c</fullName>
    <label>Funding Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold dana angsuran Installment 1</fullName>
                <label>Hold Dana Angsuran Installment 1</label>
            </value>
            <value>
                <fullName>Hold Dana Angsuran</fullName>
            </value>
            <value>
                <fullName>Hold dana update sertipikat</fullName>
                <label>Hold Dana Update Sertipikat</label>
            </value>
            <value>
                <fullName>Hold dana pengurusan akta cerai</fullName>
                <label>Hold Dana Pengurusan Akta Cerai</label>
            </value>
            <value>
                <fullName>Hold dana pengurusan pengurusan PM 1</fullName>
                <label>Hold Dana Pengurusan PM 1</label>
            </value>
            <value>
                <fullName>Take Over</fullName>
            </value>
            <value>
                <fullName>Cover Giro</fullName>
            </value>
            <value>
                <fullName>Limit Exposure</fullName>
            </value>
            <value>
                <fullName>Funding Bertahap</fullName>
            </value>
            <value>
                <fullName>Other Funding</fullName>
            </value>
            <value>
                <fullName>Other Non Funding</fullName>
                <label>Others Non Funding</label>
            </value>
            <value>
                <fullName>Hold Dana IMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>