force-app/main/default/objects/Operation_Split_Funding__c/fields/Funding_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type_Formula__c</fullName>
    <formula>TEXT(Funding_Type_Lookup__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Type</label>
    <type>Text</type>
</CustomField>