force-app/main/default/objects/Operation_Split_Funding__c/fields/Funding_Value__c.field-meta.xml
<CustomField>
    <fullName>Funding_Value__c</fullName>
    <label>Funding Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>