force-app/main/default/objects/Operation_Split_Funding__c/fields/Funding_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Funding_Value_Currency__c</fullName>
    <label>Funding Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>