force-app/main/default/objects/Operation_Split_Funding__c/fields/Hold_AP__c.field-meta.xml
<CustomField>
    <fullName>Hold_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold AP</label>
    <type>Checkbox</type>
</CustomField>