force-app/main/default/objects/Operation_Split_Funding__c/fields/hold_status__c.field-meta.xml
<CustomField>
    <fullName>hold_status__c</fullName>
    <formula>TEXT( Funding_Type__c ) == &quot;AP&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hold status</label>
    <type>Checkbox</type>
</CustomField>