force-app/main/default/objects/Operation_Split_Funding__c/fields/Keterangan__c.field-meta.xml
<CustomField>
    <fullName>Keterangan__c</fullName>
    <label>Keterangan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>