force-app/main/default/objects/Operation_Split_Funding__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipLabel>Operation Split Funding</relationshipLabel>
    <relationshipName>Operation_Split_Funding</relationshipName>
    <type>Lookup</type>
</CustomField>