force-app/main/default/objects/Operation_Split_Funding__c/fields/Others_Description__c.field-meta.xml
<CustomField>
    <fullName>Others_Description__c</fullName>
    <label>Others Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>