force-app/main/default/objects/Operation_Split_Funding__c/fields/related_term_and_condition__c.field-meta.xml
<CustomField>
    <fullName>related_term_and_condition__c</fullName>
    <externalId>true</externalId>
    <label>related_term_and_condition</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>