force-app/main/default/objects/Operation_Split_Funding__c/validationRules/Funding_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Funding_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Funding_Name__c , &quot;&quot;)</errorConditionFormula>
    <errorMessage>You cannot add new Funding</errorMessage>
</ValidationRule>